--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -10,6 +10,8 @@
 
   </div>
 
+  {{#if routerSubsReady}}
+
   <div class="genre-popular-section">
 
     <div class="contents">
@@ -29,6 +31,8 @@
     </div>
 
   </div>
+
+  {{/if}}
 
 </template>
 
