added version input back to edit page

--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -110,7 +110,11 @@
         {{/if}}
 
         <h4 class="mini-title" data-invalid={{validate 'version'}}>Version</h4>
-        <div data-alt-field="">{{verboseNone getLatestVersion}}</div>
+        {{#if fieldEdit 'latestVersion'}}
+          <input type="text" data-action="update-version" data-version-field="number" value="{{lastVersionNumber.number}}" />
+        {{else}}
+          <div data-alt-field="latestVersion" data-action="update-version">{{verboseNone lastVersionNumber.number}}</div>
+        {{/if}}
 
       </div>
 
