--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -68,7 +68,7 @@
             <div class="key">Ported by:</div><div class="value">{{getUsername author}}&nbsp;</div>
             <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
             <div class="key">Code:</div><div class="value">{{verboseNone codeLink}}&nbsp;</div>
-            <div class="key">Version:</div><div class="value">{{verboseNone getLatestVersion}}&nbsp;</div>
+            <div class="key">Version:</div><div class="value">{{verboseNone latestVersionNumber}}&nbsp;</div>
 
           </div>
 
