updated internal links to use FlowRouter names rather than hard-coded urls

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -50,7 +50,7 @@
     <div class="clearfix action-buttons">
 
       <div class="container hide-for-phone">
-        <a class="primary large-button" href="/upload">
+        <a class="primary large-button" href={{getPath 'upload'}}>
           <i class="icon-myapps"></i>
           UPLOAD YOUR FIRST APP
         </a>
@@ -84,7 +84,7 @@
       <div class="left-float block-phone">
 
         <div class="button-block">
-          <a class="sandstorm-button primary hide-for-phone" href="/upload">
+          <a class="sandstorm-button primary hide-for-phone" href={{getPath 'upload'}}>
             <i class="icon-myapps"></i>
             <span class="text">UPLOAD NEW APP</span>
           </a>
