--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -35,7 +35,7 @@
           <div class="right-float">
 
             <div class="edit-button hide-for-phone">
-              <a class="sandstorm-button neutral small" href="/upload/edit/{{_id}}">
+              <a class="sandstorm-button neutral small" href={{getZippedPath 'edit' 'appId' _id}}>
                 <i class="icon-edit"></i>
                 <span class="text">EDIT</span>
               </a>
