--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -21,7 +21,7 @@
 
           {{#if submitted}}
             <div class="message">
-              <a href="/appsByMe">SUBMITTED ON <span class="date">{{dateFormat submitted 'DD MMM YYYY'}}</span></a>
+              <a href="{{getPath 'appsByMe'}}">SUBMITTED ON <span class="date">{{dateFormat submitted 'DD MMM YYYY'}}</span></a>
             </div>
           {{else}}
             {{#if lastEdit}}
