--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -30,7 +30,7 @@
 
               <div class="pad-top-to-align">
                 <div class="edit-button">
-                  <a class="sandstorm-button neutral small" href="/admin/review/{{_id}}">
+                  <a class="sandstorm-button neutral small" href={{getZippedPath 'review' 'appId' _id}}>
                     <i class="icon-edit"></i>
                     <span class="text">EDIT</span>
                   </a>
@@ -100,7 +100,7 @@
             <i class="icon-revisions"></i>
             <div class="text">Request Revision</div>
           </div>
-          <a class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" href="/admin/review/{{_id}}?flag=true">
+          <a class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" href={{getZippedPath 'review' 'appId' _id 'flag' true}}>
             <i class="icon-flagged_light"></i>
             <div class="text">Flag</div>
           </a>
