--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -30,7 +30,7 @@
 
                   <div class="header">{{name}}</div>
 
-                  <div class="app-author-full-width"><a href="/appMarket/author/{{author}}">{{getUsername author}}</a></div>
+                  <div class="app-author-full-width"><a href="{{getZippedPath 'appMarketAuthor' 'author' author}}">{{getUsername author}}</a></div>
 
                 </div>
 
@@ -41,7 +41,7 @@
                 <div class="half-col">
 
                   <div class="date">{{dateFormat createdAt 'MMMM DD, YYYY'}}</div>
-                  <div class="genre"><a href="/appMarket/genres/{{category}}">{{category}}</a></div>
+                  <div class="genre"><a href="{{getZippedPath 'appMarketGenre' 'genre' category}}">{{category}}</a></div>
 
                 </div>
 
