--- a/app/client/templates/admin/admin.scss
+++ b/app/client/templates/admin/admin.scss
@@ -6,7 +6,7 @@ body.admin {
   // At present, there is no responsive styling for the admin console
   // It is designed to be viewed on an HD laptop, and will cover > 100%
   // of the screen width if viewed on a smaller screen.
-  min-width: 175rem;
+  // min-width: 155rem;
 
 }
 
