app tables now reactive, plus search bar moved to the left in topbar

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -1,6 +1,6 @@
 <template name="appItemFullWidth">
 
-  <div class="app-item-container full-width">
+  <div class="app-item-container full-width approved-{{app.approved}}">
 
     <div class="app-item-inner">
 
