--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -29,11 +29,13 @@
           </ul>
         </div>
 
-        <input class="search-box" type="text" data-field="search-term" />
-        <button class="search-button" data-action="search-apps"><i class="icon-search"></i></button>
-
       </div>
 
+    </div>
+
+    <div class="search-section">
+      <input class="search-box" type="text" data-field="search-term" />
+      <button class="search-button" data-action="search-apps"><i class="icon-search"></i></button>      
     </div>
 
   </div>
