--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -44,7 +44,7 @@
 
     <div class="genre-name"><a href="{{getZippedPath 'appMarketGenre' 'genre' genre}}">{{genre}} <i class="icon-chevron-right"></i></a></div>
 
-    {{> appTable}}
+    {{> appTable genre=genre reactive=true}}
 
   {{/if}}
   {{/if}}
