added flag details to message display

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -63,7 +63,7 @@
 
       <div class="spacer clearfix"></div>
 
-      {{> appNotesBox notes=parentApp.notes}}
+      {{> appNotesBox notes=parentApp.notes flags=parentApp.flags}}
 
       <div class="spacer clearfix"></div>
 
