remove flag details for app edit (they only appear in app review now)

--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -23,7 +23,7 @@
 
       <div class="spacer clearfix"></div>
 
-      {{> appNotesBox notes=parentApp.notes flags=parentApp.flags}}
+      {{> appNotesBox notes=parentApp.notes}}
 
       <div class="spacer clearfix"></div>
 
