--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -92,11 +92,11 @@
 
         <div class="button-block">
 
-          <div class="sandstorm-button color green {{showButton 'approved'}}" data-action="approve">
+          <div class="sandstorm-button color green {{showButton 'approved'}} {{#if appState 'approved'}}active{{/if}}" data-action="approve">
             <i class="icon-approved_light"></i>
             <div class="text">Approve</div>
           </div>
-          <div class="sandstorm-button color purple {{showButton 'request-revision'}}" data-action="request-revision">
+          <div class="sandstorm-button color purple {{showButton 'request-revision'}} {{#if appState 'revisionRequested'}}active{{/if}}" data-action="request-revision">
             <i class="icon-revisions"></i>
             <div class="text">Request Revision</div>
           </div>
@@ -104,7 +104,7 @@
             <i class="icon-flagged_light"></i>
             <div class="text">Flag</div>
           </a>
-          <div class="sandstorm-button color black {{showButton 'rejected'}}" data-action="reject">
+          <div class="sandstorm-button color black {{showButton 'rejected'}} {{#if appState 'rejected'}}active{{/if}}" data-action="reject">
             <i class="icon-rejected_light"></i>
             <div class="text">Reject</div>
           </div>
