denormalise username in app doc

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -28,7 +28,7 @@
 
             <div class="app-name-full-width">{{name}}</div>
 
-            <div class="app-author-full-width">{{getUsername author}}</div>
+            <div class="app-author-full-width">{{authorName}}</div>
 
           </div>
 
@@ -65,7 +65,7 @@
 
             <div class="divider"></div>
 
-            <div class="key">Ported by:</div><div class="value">{{getUsername author}}&nbsp;</div>
+            <div class="key">Ported by:</div><div class="value">{{authorName}}&nbsp;</div>
             <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
             <div class="key">Code:</div><div class="value">{{verboseNone codeLink}}&nbsp;</div>
             <div class="key">Version:</div><div class="value">{{verboseNone latestVersionNumber}}&nbsp;</div>
