--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -43,7 +43,7 @@
 
               <div class="app-name-full-width">{{name}}</div>
 
-              <div class="app-author-full-width">{{getUsername author}}</div>
+              <div class="app-author-full-width">{{authorName}}</div>
 
             </div>
 
@@ -58,7 +58,7 @@
 
               <div class="divider"></div>
 
-              <div class="key">Ported by:</div><div class="value">{{getUsername author}}&nbsp;</div>
+              <div class="key">Ported by:</div><div class="value">{{authorName}}&nbsp;</div>
               <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
               <div class="key">Code:</div><div class="value">{{verboseNone codeLink}}&nbsp;</div>
               <div class="key">Version:</div><div class="value">{{verboseNone latestVersionNumber}}&nbsp;</div>
