single app page updated with new rating regime

--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -2,7 +2,7 @@
 
   <div class="app-rating-container">
     <div class="text">
-      {{rating}}% like it
+      {{numberFormat rating '0.00'}}% like it
     </div>
     <div class="bar">
       <div class="background {{backgroundCol}}"></div>
