--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -59,7 +59,7 @@
                   <div class="left-float">
                     {{> appRating rating=percentageRating backgroundCol='light'}}
                     <!-- <div class="app-rating">
-                      {{{appRating rating}}}
+                      {{> appRating rating=rating}}
                     </div>
                     <span>( {{ratingsCount}} )</span> -->
                   </div>
@@ -141,7 +141,7 @@
               <div class="rating left-float">
                 {{> appRating rating=percentageRating}}
                 <!-- <div class="app-rating monochrome">
-                  {{{appRating rating}}}
+                  {{> appRating rating=rating}}
                 </div> -->
                 <span class="ratings-count"> ( {{ratingsCount}} )</span>
               </div>
