--- a/app/client/templates/components/app-rating.scss
+++ b/app/client/templates/components/app-rating.scss
@@ -15,6 +15,7 @@
     display: block;
     width: 10rem;
     position: relative;
+    z-index: 0;
 
     .background {
       background-color: #ede9ee;
@@ -33,6 +34,23 @@
       top: 0;
       bottom: 0;
     }
+  }
+
+}
+
+.app-item-container {
+
+  .app-rating-container {
+
+    .text {
+      font-size: 1.4rem;
+      line-height: 1.8rem;
+    }
+
+    .bar {
+      width: 9rem;
+    }
+
   }
 
 }
