--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -2,11 +2,11 @@
 
   <div class="app-rating-container">
     <div class="text">
-      {{numberFormat rating '0.00'}}% like it
+      {{numberFormat percentage '0.00'}}% like it
     </div>
     <div class="bar">
       <div class="background {{backgroundCol}}"></div>
-      <div class="fill" style="width: {{rating}}%;"></div>
+      <div class="fill" style="width: {{percentage}}%;"></div>
     </div>
   </div>
 
