--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -57,11 +57,7 @@
                 <div class="ratings-bar">
 
                   <div class="left-float">
-                    {{> appRating rating=percentageRating backgroundCol='light'}}
-                    <!-- <div class="app-rating">
-                      {{> appRating rating=rating}}
-                    </div>
-                    <span>( {{ratingsCount}} )</span> -->
+                    {{> appRating ratings=ratings backgroundCol='light'}}
                   </div>
 
                   <div class="right-float social">
@@ -139,21 +135,14 @@
 
             <div class="review-bar">
               <div class="rating left-float">
-                {{> appRating rating=percentageRating}}
-                <!-- <div class="app-rating monochrome">
-                  {{> appRating rating=rating}}
-                </div> -->
+                {{> appRating ratings=ratings}}
                 <span class="ratings-count"> ( {{ratingsCount}} )</span>
               </div>
 
               <div class="right-float option">
                 <div class="write-review">
                   {{#if writeReview}}
-                    <div class="rating">
-                      <div class="app-rating" data-action="rate-app">
-                        {{{appRating myReview.rating}}}
-                      </div>
-                    </div>
+                    {{> myRatingBox rating=myReview.rating}}
                   {{/if}}
                   <span data-action="write-review">
                     Write a review
@@ -302,4 +291,34 @@
     <div class="date">{{dateFormat createdAt 'MMMM D YYYY'}}</div>
     <div class="review">{{text}}</div>
   </div>
+</template>
+
+<template name="myRatingBox">
+
+  <div class="my-rating-box">
+    {{#if equal buttonState -1}}
+      <div class="sandstorm-button {{#if equal rating 0}}primary{{else}}neutral{{/if}}" data-rating=0 data-action="bug-modal">
+        It's broken
+      </div>
+      <div class="sandstorm-button {{#if equal rating 1}}primary{{else}}neutral{{/if}}" data-rating=1>
+        I didn't like it
+      </div>
+    {{else}}{{#if equal buttonState 1}}
+      <div class="sandstorm-button {{#if equal rating 2}}primary{{else}}neutral{{/if}}" data-rating=2>
+        It gets the job done
+      </div>
+      <div class="sandstorm-button {{#if equal rating 3}}primary{{else}}neutral{{/if}}" data-rating=3>
+        It's amazing!
+      </div>
+    {{else}}
+      <div class="sandstorm-button secondary" data-button-state=-1 data-rating=1>
+        <i class="fa fa-thumbs-down"></i>
+      </div>
+      <div class="sandstorm-button secondary" data-button-state=1 data-rating=2>
+        <i class="fa fa-thumbs-up"></i>
+      </div>
+    {{/if}}{{/if}}
+  </div>
+
+
 </template>
