--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -4,7 +4,7 @@
 
     <div class="contents">
 
-      <div class="genre-name large">{{genre}}{{#if authorId}} - {{authorNameId}}{{/if}}</div>
+      <div class="genre-name large">{{genre}}{{#if author}} - {{author.username}}{{/if}}</div>
 
     </div>
 
