--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -24,14 +24,14 @@
 
             <div class="app-name">{{name}}</div>
 
-            <a href="{{getZippedPath 'appMarketAuthor' 'author' author}}"><div class="app-author">{{authorName}}</div></a>
+            <a href="{{getZippedPath 'appMarketAuthor' 'authorId' author}}"><div class="app-author">{{authorName}}</div></a>
 
             <div class="app-rating">{{> appRating ratings=ratings}}</div>
 
             <div class="install-price">
 
-              <a href="{{fullInstallLink}}" target="_blank" class="app-install {{#if installed}}installed{{/if}}" data-action="install-app">
-                INSTALL{{#if installed}}+{{/if}}  <i class="icon-arrow-install"></i>
+              <a href="{{fullInstallLink}}" target="_blank" class="app-install {{#if invoke 'installed'}}installed{{/if}}" data-action="install-app">
+                {{#if invoke 'installed'}}RE-{{/if}}INSTALL  <i class="icon-arrow-install"></i>
               </a>
 
               <div class="app-price {{#if free price}}free{{/if}}">
@@ -61,7 +61,7 @@
 
           <div class="app-name">{{name}}</div>
 
-          <a href="{{getZippedPath 'appMarketAuthor' 'author' author}}"><div class="app-author">{{authorName}}</div></a>
+          <a href="{{getZippedPath 'appMarketAuthor' 'authorId' author}}"><div class="app-author">{{authorName}}</div></a>
 
           {{#if ../../../installPage}}
             <div class="app-rating">
@@ -111,8 +111,8 @@
 
             <div class="install-price">
 
-              <a href="{{fullInstallLink}}" target="_blank" class="app-install {{#if installed}}installed{{/if}}" data-action="install-app">
-                INSTALL{{#if installed}}+{{/if}}  <i class="icon-arrow-install"></i>
+              <a href="{{fullInstallLink}}" target="_blank" class="app-install {{#if invoke 'installed'}}installed{{/if}}" data-action="install-app">
+                {{#if invoke 'installed'}}RE-{{/if}}INSTALL  <i class="icon-arrow-install"></i>
               </a>
 
               <div class="app-price {{#if free price}}free{{/if}}">
