--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -68,7 +68,9 @@
 
                 </div>
 
-                <div class="action-buttons force-height clearfix">
+                <div class="clearfix"></div>
+
+                <div class="action-buttons force-height">
 
                   <a href="{{fullInstallLink}}" target="_blank" class="{{#if installed}}installed{{else}}install{{/if}} button" data-action="install-app">
                     INSTALL{{#if installed}}+{{/if}} <i class="icon-arrow-install"></i>
