--- a/app/client/templates/components/app-rating.scss
+++ b/app/client/templates/components/app-rating.scss
@@ -3,38 +3,101 @@
   display: inline-block;
   vertical-align: top;
   line-height: auto;
+  font-size: 1.7rem;
 
-  .text {
-    display: block;
-    color: #3d9145;
-    font-size: 1.8rem;
-    line-height: 2.4rem;
+  > i {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 3rem !important;
+
+    &.fa-thumbs-o-up {
+        color: #005e1b !important;
+    }
+    &.fa-thumbs-o-down {
+        color: #db1a00 !important;
+    }
   }
 
-  .bar {
-    display: block;
-    width: 10rem;
-    position: relative;
-    z-index: 0;
+  .ratings {
 
-    .background {
-      background-color: #ede9ee;
-      height: 0.75rem;
-      width: 100%;
-      position: relative;
+    display: inline-block;
+    vertical-align: middle;
 
-      &.light {
-        background-color: #ffffff;
+
+      .text {
+        display: block;
+        position: relative;
+        color: #3d9145;
+        line-height: 0.75rem;
+        height: 0.75rem;
+
+        .labels {
+          position: absolute;
+          left: 0;
+          width: 100%;
+          top: 0;
+          bottom: 0;
+          font-size: 0;
+          height: 1.5rem;
+          line-height: 0;
+
+          > * {
+            position: relative;
+            height: 100%;
+            top: 0;
+            display: inline-block;
+            text-align: center;
+            font-size: 1.1rem;
+            color: #222222;
+          }
+        }
       }
-    }
-    .fill {
-      background-color: #3d9145;
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-    }
+
+      .bar {
+        $bar-height: 1.25rem;
+
+        display: block;
+        width: 15rem;
+        position: relative;
+        z-index: 0;
+        height: $bar-height;
+
+        .background {
+          background-color: #ede9ee;
+          height: 100%;
+          width: 100%;
+          position: relative;
+
+          &.light {
+            background-color: #ffffff;
+          }
+        }
+        .fill {
+          position: absolute;
+          left: 0;
+          width: 100%;
+          top: 0;
+          bottom: 0;
+          font-size: 0;
+          height: $bar-height;
+          line-height: 0;
+
+          > * {
+            position: relative;
+            height: 100%;
+            top: 0;
+            display: inline-block;
+          }
+
+          .broken { background-color: #db1a00; }
+          .didnt-like { background-color: #ea9126; }
+          .job-done { background-color: #41af00; }
+          .amazing { background-color: #005e1b; }
+        }
+      }
+
   }
+
 
 }
 
