--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -39,12 +39,12 @@
 
 <template name="genreTable">
 
-  {{#if routerSubsReady}}
+  {{#if Template.subscriptionsReady}}
   {{#if countApps genre}}
 
     <div class="genre-name"><a href="{{getZippedPath 'appMarketGenre' 'genre' genre}}">{{genre}} <i class="icon-chevron-right"></i></a></div>
 
-    {{> appTable genre=genre reactive=true}}
+    {{> appTable genre=genre reactive=true bigLeader=bigLeader}}
 
   {{/if}}
   {{/if}}
