reverted to simple (two-colour) app rating view for small app cards. changed colour scheme as per #115

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -76,7 +76,7 @@
             </div>
           {{else}}
             <div class="app-rating">
-              {{> appRating ratings=ratings}}
+              {{> appRating ratings=ratings simple=true}}
             </div>
           {{/if}}
 
