--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -1,27 +1,44 @@
 <template name="appRating">
 
   <div class="app-rating-container">
-    <i class="fa fa-thumbs-o-up"></i>
-    <div class="ratings">
-      <div class="text">
-        <div class="labels">
-          <div class="amazing" style="width: {{percentage.amazing}}%;">{{numberFormat percentage.amazing '0'}}%</div>
-          <div class="job-done" style="width: {{percentage.jobDone}}%;">{{numberFormat percentage.jobDone '0'}}%</div>
-          <div class="didnt-like" style="width: {{percentage.didntLike}}%;">{{numberFormat percentage.didntLike '0'}}%</div>
-          <div class="broken" style="width: {{percentage.broken}}%;">{{numberFormat percentage.broken '0'}}%</div>
+    {{#if simple}}
+      <div class="ratings">
+        <div class="text">
+          <div class="labels">
+            <div class="amazing">{{numberFormat percentage.positive '0'}}%</div>
+            <i class="fa fa-thumbs-up"></i>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="background {{backgroundCol}}"></div>
+          <div class="fill">
+            <div class="job-done" style="width: {{percentage.positive}}%;"></div>
+          </div>
         </div>
       </div>
-      <div class="bar">
-        <div class="background {{backgroundCol}}"></div>
-        <div class="fill">
-          <div class="amazing" style="width: {{percentage.amazing}}%;"></div>
-          <div class="job-done" style="width: {{percentage.jobDone}}%;"></div>
-          <div class="didnt-like" style="width: {{percentage.didntLike}}%;"></div>
-          <div class="broken" style="width: {{percentage.broken}}%;"></div>
+    {{else}}
+      <i class="fa fa-thumbs-up"></i>
+      <div class="ratings">
+        <div class="text">
+          <div class="labels">
+            <div class="amazing" style="width: {{percentage.amazing}}%;">{{numberFormat percentage.amazing '0'}}%</div>
+            <div class="job-done" style="width: {{percentage.jobDone}}%;">{{numberFormat percentage.jobDone '0'}}%</div>
+            <div class="didnt-like" style="width: {{percentage.didntLike}}%;">{{numberFormat percentage.didntLike '0'}}%</div>
+            <div class="broken" style="width: {{percentage.broken}}%;">{{numberFormat percentage.broken '0'}}%</div>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="background {{backgroundCol}}"></div>
+          <div class="fill">
+            <div class="amazing" style="width: {{percentage.amazing}}%;"></div>
+            <div class="job-done" style="width: {{percentage.jobDone}}%;"></div>
+            <div class="didnt-like" style="width: {{percentage.didntLike}}%;"></div>
+            <div class="broken" style="width: {{percentage.broken}}%;"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <i class="fa fa-thumbs-o-down"></i>
+      <i class="fa fa-thumbs-down"></i>
+    {{/if}}
   </div>
 
 </template>
