updated app upload/edit/review pages for new spk regime

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -105,7 +105,7 @@
         {{/if}}
 
         <h3 class="title">Author</h3>
-        <div class="read-only">{{authorName}}</div>
+        <div class="read-only">{{parentApp.authorName}}</div>
 
       </div>
 
@@ -118,7 +118,7 @@
       <div class="half-col">
 
         <h4 class="mini-title">Ported by</h4>
-        <div class="read-only">{{authorName}}</div>
+        <div class="read-only">{{parentApp.authorName}}</div>
 
         <h4 class="mini-title" data-invalid={{validate 'codeLink'}}>Code URL</h4>
         {{#if fieldEdit 'codeLink'}}
