--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -78,7 +78,7 @@
         {{/if}}
 
         <h3 class="title">Author</h3>
-        <div class="read-only">{{authorName}}</div>
+        <div class="read-only">{{parentApp.authorName}}</div>
 
       </div>
 
@@ -91,7 +91,7 @@
       <div class="half-col">
 
         <h4 class="mini-title">Ported by</h4>
-        <div class="read-only">{{authorName}}</div>
+        <div class="read-only">{{parentApp.authorName}}</div>
 
         <h4 class="mini-title" data-invalid={{validate 'codeLink'}}>Code URL</h4>
         {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.codeLink}}</div>{{/if}}
