--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -187,8 +187,8 @@
 
     <div class="spacer clearfix"></div>
 
-    <div class="filename existing">{{verboseNone origSpk.original.name}}</div>
-    <a class="square-button dark rem-space-float" href="{{#with spk}}{{this.url store='spkS3' download=true}}{{/with}}" target="_blank"><i class="fa fa-download"></i></a>
+    <div class="filename existing">{{verboseNone existingApp.filename}}</div>
+    <a class="square-button dark rem-space-float" href="/package/{{existingPackageId}}" target="_blank"><i class="fa fa-download"></i></a>
 
     <div class="spacer clearfix"></div>
 
