updated icons for thumbs up/down and scroll brackets.  fixes #25

--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -6,7 +6,7 @@
         <div class="text">
           <div class="labels">
             <div class="amazing">{{numberFormat percentage.positive '0'}}%</div>
-            <i class="fa fa-thumbs-up"></i>
+            <i class="icon-extra-thumbs-up"></i>
           </div>
         </div>
         <div class="bar">
@@ -17,7 +17,7 @@
         </div>
       </div>
     {{else}}
-      <i class="fa fa-thumbs-up"></i>
+      <i class="icon-extra-thumbs-up"></i>
       <div class="ratings">
         <div class="text">
           <div class="labels">
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-      <i class="fa fa-thumbs-down"></i>
+      <i class="icon-extra-thumbs-down"></i>
     {{/if}}
   </div>
 
