--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -99,6 +99,44 @@
 .icon-updated:before { content: "\f11c"; }
 .icon-upload:before { content: "\f11d"; }
 
+@font-face {
+	font-family: 'sandstorm-two';
+	src:url('icons/sandstorm/sandstorm-two.eot?k1lw2r');
+	src:url('icons/sandstorm/sandstorm-two.eot?#iefixk1lw2r') format('embedded-opentype'),
+		url('icons/sandstorm/sandstorm-two.ttf?k1lw2r') format('truetype'),
+		url('icons/sandstorm/sandstorm-two.woff?k1lw2r') format('woff'),
+		url('icons/sandstorm/sandstorm-two.svg?k1lw2r#sandstorm-two') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-extra-"], [class*=" icon-extra-"] {
+	font-family: 'sandstorm-two';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-extra-l-angle:before {
+	content: "\e600";
+}
+.icon-extra-r-angle:before {
+	content: "\e601";
+}
+.icon-extra-thumbs-down:before {
+	content: "\e602";
+}
+.icon-extra-thumbs-up:before {
+	content: "\e603";
+}
+
 html {
   font-family: $main-font;
   font-weight: 300;
