--- a/app/client/templates/components/app-rating.scss
+++ b/app/client/templates/components/app-rating.scss
@@ -8,12 +8,12 @@
   > i {
     display: inline-block;
     vertical-align: middle;
-    font-size: 3rem !important;
+    font-size: 2.6rem !important;
 
-    &.fa-thumbs-up {
+    &.icon-extra-thumbs-up {
         color: #d8d8d8 !important;
     }
-    &.fa-thumbs-down {
+    &.icon-extra-thumbs-down {
         color: #d8d8d8 !important;
     }
   }
