--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -197,7 +197,7 @@
 
   <div class="carousel">
 
-    <div class="prev-button" data-action="carousel-prev"><i class="fa fa-angle-left"></i></div>
+    <div class="prev-button" data-action="carousel-prev"><i class="icon-extra-l-angle"></i></div>
     <div class="owl-carousel">
       {{#each images}}
       <div class="screenshot-container">
@@ -205,7 +205,7 @@
       </div>
       {{/each}}
     </div>
-    <div class="next-button" data-action="carousel-next"><i class="fa fa-angle-right"></i></div>
+    <div class="next-button" data-action="carousel-next"><i class="icon-extra-r-angle"></i></div>
 
   </div>
 
@@ -252,7 +252,7 @@
 
   {{#unless isPhone}}
     <div class="review-frame">
-      <div class="prev-button {{#unless extraReviews}}disabled{{/unless}}" data-action="reviews-prev"><i class="fa fa-angle-left"></i></div>
+      <div class="prev-button {{#unless extraReviews}}disabled{{/unless}}" data-action="reviews-prev"><i class="icon-extra-l-angle"></i></div>
       <div class="reviews">
         <div class="owl-carousel">
           {{#each reviewGroups}}
@@ -264,7 +264,7 @@
           {{/each}}
         </div>
       </div>
-      <div class="next-button {{#unless extraReviews}}disabled{{/unless}}" data-action="reviews-next"><i class="fa fa-angle-right"></i></div>
+      <div class="next-button {{#unless extraReviews}}disabled{{/unless}}" data-action="reviews-next"><i class="icon-extra-r-angle"></i></div>
     </div>
   {{else}}
   <div class="reviews">
