--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -2,6 +2,7 @@
 
   <div class="app-rating-container">
     {{#if simple}}
+      {{#if isNumber percentage.positive}}
       <div class="ratings">
         <div class="text">
           <div class="labels">
@@ -16,15 +17,23 @@
           </div>
         </div>
       </div>
+      {{else}}
+      <div class="message table">
+        <i class="icon-extra-thumbs-up"></i>
+        <span>Be the first to rate</span>
+        <i class="icon-extra-thumbs-down"></i>
+      </div>
+      {{/if}}
     {{else}}
       <i class="icon-extra-thumbs-up"></i>
+      {{#if isNumber percentage.jobDone}}
       <div class="ratings">
         <div class="text">
           <div class="labels">
-            <div class="amazing" style="width: {{percentage.amazing}}%;">{{numberFormat percentage.amazing '0'}}%</div>
-            <div class="job-done" style="width: {{percentage.jobDone}}%;">{{numberFormat percentage.jobDone '0'}}%</div>
-            <div class="didnt-like" style="width: {{percentage.didntLike}}%;">{{numberFormat percentage.didntLike '0'}}%</div>
-            <div class="broken" style="width: {{percentage.broken}}%;">{{numberFormat percentage.broken '0'}}%</div>
+            {{#if percentage.amazing}}<div class="amazing" style="width: {{percentage.amazing}}%;">{{numberFormat percentage.amazing '0'}}%</div>{{/if}}
+            {{#if percentage.jobDone}}<div class="job-done" style="width: {{percentage.jobDone}}%;">{{numberFormat percentage.jobDone '0'}}%</div>{{/if}}
+            {{#if percentage.didntLike}}<div class="didnt-like" style="width: {{percentage.didntLike}}%;">{{numberFormat percentage.didntLike '0'}}%</div>{{/if}}
+            {{#if percentage.broken}}<div class="broken" style="width: {{percentage.broken}}%;">{{numberFormat percentage.broken '0'}}%</div>{{/if}}
           </div>
         </div>
         <div class="bar">
@@ -37,6 +46,11 @@
           </div>
         </div>
       </div>
+      {{else}}
+      <div class="message">
+        Be the first to rate this app
+      </div>
+      {{/if}}
       <i class="icon-extra-thumbs-down"></i>
     {{/if}}
   </div>
