--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -35,10 +35,17 @@
           <div class="right-float">
 
             <div class="edit-button hide-for-phone">
+              {{#if equal approved approval.draft}}
+              <a class="sandstorm-button neutral small" href={{getZippedPath 'upload' 'appId' _id}}>
+                <i class="icon-edit"></i>
+                <span class="text">CONTINUE</span>
+              </a>
+              {{else}}
               <a class="sandstorm-button neutral small" href={{getZippedPath 'edit' 'appId' _id}}>
                 <i class="icon-edit"></i>
                 <span class="text">EDIT</span>
               </a>
+              {{/if}}
             </div>
 
             <div class="public-private">
