--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -36,7 +36,7 @@
 
             <div class="edit-button hide-for-phone">
               {{#if equal approved approval.draft}}
-              <a class="sandstorm-button neutral small" href={{getZippedPath 'upload' 'appId' _id}}>
+              <a class="sandstorm-button neutral small" href={{getZippedPath 'upload draft' 'appId' _id}}>
                 <i class="icon-edit"></i>
                 <span class="text">CONTINUE</span>
               </a>
